titik bezier
change